force-app/main/default/objects/Settlement__c/fields/Attorney_Fee__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Fee__c</fullName>
    <formula>Amount__c *  Contingency_Fee_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attorney Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>