force-app/main/default/objects/Settlement__c/fields/Contingency_Fee_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Fee_Rate__c</fullName>
    <formula>Matter__r.litify_pm__Contingency_Fee_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contingency Fee Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>