force-app/main/default/objects/Settlement__c/fields/Expected_Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Settlement_Date__c</fullName>
    <label>Expected Settlement Date</label>
    <type>Date</type>
</CustomField>