force-app/main/default/objects/Settlement__c/fields/Flat_Fee_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Flat_Fee_Reduction__c</fullName>
    <label>Flat Fee Reduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>