force-app/main/default/objects/Settlement__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Settlements</relationshipLabel>
    <relationshipName>Settlements</relationshipName>
    <type>Lookup</type>
</CustomField>