force-app/main/default/objects/Settlement__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <label>Matter</label>
    <referenceTo>litify_pm__Matter__c</referenceTo>
    <relationshipLabel>Settlements</relationshipLabel>
    <relationshipName>Settlements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>