force-app/main/default/objects/Settlement__c/fields/MedPay_Available__c.field-meta.xml
<CustomField>
    <fullName>MedPay_Available__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>MedPay Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>