force-app/main/default/objects/Settlement__c/fields/MedPay_Remaining__c.field-meta.xml
<CustomField>
    <fullName>MedPay_Remaining__c</fullName>
    <formula>MedPay_Available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MedPay Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>