force-app/main/default/objects/Settlement__c/fields/Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Negotiation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Negotiation</label>
    <referenceTo>litify_pm__Negotiation__c</referenceTo>
    <relationshipLabel>Settlements</relationshipLabel>
    <relationshipName>Settlements</relationshipName>
    <type>Lookup</type>
</CustomField>