force-app/main/default/objects/Settlement__c/fields/Percent_Fee_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Percent_Fee_Reduction__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Percent Fee Reduction</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>