force-app/main/default/objects/Settlement__c/fields/Percent_Fee_Reduction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Percent_Fee_Reduction_Amount__c</fullName>
    <formula>Attorney_Fee__c *  Percent_Fee_Reduction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Fee Reduction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>