force-app/main/default/objects/Settlement__c/fields/Total_Amount_To_Client__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_To_Client__c</fullName>
    <formula>IF( RecordType.Name = &quot;Medical_Payment_Recovery&quot;, 0.00, Amount__c - Total_Damage_Payments_Reductions__c -  Total_Expense_Payments_Reductions__c -  Total_Attorney_Fee__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount To Client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>