force-app/main/default/objects/Settlement__c/fields/Total_Attorney_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Attorney_Fee__c</fullName>
    <formula>Attorney_Fee__c - Flat_Fee_Reduction__c - Percent_Fee_Reduction_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Attorney Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>