force-app/main/default/objects/Settlement__c/fields/Total_Damage_Payments_Reductions__c.field-meta.xml
<CustomField>
    <fullName>Total_Damage_Payments_Reductions__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Total Damage Payments / Reductions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>