force-app/main/default/objects/Settlement__c/fields/Total_Expense_Payments_Reductions__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense_Payments_Reductions__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Total Expense Payments / Reductions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>