force-app/main/default/objects/Settlement__c/fields/Total_MedPay_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_MedPay_Received__c</fullName>
    <label>Total MedPay Received</label>
    <summarizedField>MedPay_Deposit__c.Amount__c</summarizedField>
    <summaryForeignKey>MedPay_Deposit__c.Settlement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>