force-app/main/default/objects/Settlement__c/recordTypes/Liability_Settlement.recordType-meta.xml
<RecordType>
    <fullName>Liability_Settlement</fullName>
    <active>true</active>
    <label>Liability Settlement</label>
</RecordType>