force-app/main/default/objects/Settlement__c/recordTypes/Medical_Payment_Recovery.recordType-meta.xml
<RecordType>
    <fullName>Medical_Payment_Recovery</fullName>
    <active>true</active>
    <label>Medical Payment Recovery</label>
</RecordType>