force-app/main/default/objects/Settlement__c/recordTypes/UIM_Settlement.recordType-meta.xml
<RecordType>
    <fullName>UIM_Settlement</fullName>
    <active>true</active>
    <label>UIM Settlement</label>
</RecordType>