force-app/main/default/objects/Settlement__c/recordTypes/Uninsured_Settlement.recordType-meta.xml
<RecordType>
    <fullName>Uninsured_Settlement</fullName>
    <active>true</active>
    <label>Uninsured Settlement</label>
</RecordType>