force-app/main/default/objects/Settlement__c/listViews/All_Settlements.listView-meta.xml
<ListView>
    <fullName>All_Settlements</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Settlements</label>
</ListView>